门户交互代码优化